
2016-08-16  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (field_accept): fixed bug #300 (segfault on screen ACCEPT
	  OMITTED).

2016-08-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_runtime_error): reversed the prefix from runtime errors,
	  always starts with "libcob: " now
	* common.c (cob_get_strerror): own reentrant version of strerror
	* common.c (cob_load_config_file): use cob_get_strerror instead of
	  a guessed error message

2016-07-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_reg_sighnd): call cob_set_signal() if not done already

2016-07-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* coblocal.h: changed types in config_tbl to unsigned (compiler warnings)
	* common.h [_MSC_VER]: added definitions for COB_NOINLINE, COB_A_INLINE

2016-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: added support for LINE/COL 0.
	* screenio.c: fixed small issues with DISPLAY ALL X"02" and X"07".

2016-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h, coblocal.h: moved internal functions to coblocal as COB_HIDDEN
	* common.h: added COB_EXPIMP to cob_set_exception
	* common.c, coblocal.h: #ifdef 0 for unused helper functions
	  cob_int_to_string and cob_int_to_formatted_bytestring

2016-06-26  Edward Hart <edward.dan.hart@gmail.com>

	* common.c, common.h, move.c, string.c: moved cob_max_int and cob_min_int
	  to common.c.

2016-06-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: minor fixes for compatibility to VC2005

2016-06-20 Ron Norman <rjn@inglenet.com>

	* coblocal.h, common.c: FR #138 identify config variables which accept
	  a path list and any which only accept a single directory/file
	  are checked for the PATH_SEP character and error is given if
	  that has been used by mistake. Example:

	  Invalid value '/temp:/tmp' for configuration tag 'COB_TRACE_FILE';
	       should not contain ':'
